Fixed overlow scrollbars

--- a/css/personal_site.css
+++ b/css/personal_site.css
@@ -61,7 +61,7 @@ nav a.button{
     list-style-type: none;
 }
 .infobox p{
-    overflow: scroll;
+    overflow: auto;
     height: 80%;
     background : linear-gradient( #FFEBCD 30%, rgba(255, 255, 255, 0)), linear-gradient(rgba(255, 255, 255, 0),  #FFEBCD 70%) 0 100%, radial-gradient(farthest-side at 50% 0, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)), radial-gradient(farthest-side at 50% 100%, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)) 0 100%;
 
